--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="map" style="width: 100%; height:700px;"></div>
 
         <!--put your external script links here-->
-        <script src ="js/main.js"></script>
+        <script src ="js/main2.js"></script>
         
     </body>
 </html>
